--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Synthetic biotechnology techniques for insulin manufacturing to make diabetes cu
             <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C4E03AQERvMav9IValw/profile-displayphoto-shrink_800_800/0?e=1602115200&v=beta&t=X6bChnfVKE9Q0WVl_WSbTFUnz19Z4Dm-DbPeHJP2Cxc" alt="" />
             <h4>Cameron Owen</h4>
             <p class="text-muted">Founder, ex-CEO Aevus Diagnostics <br>
-              MS, Healthcare Management - Johns Hopkins University <br>
+              MS, Healthcare Management <br> Johns Hopkins University <br>
               BS, Microbiology - University of Arizona</p>
             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/camerondowen/"><i class="fab fa-linkedin-in"></i></a>
           </div>
@@ -123,7 +123,7 @@ Synthetic biotechnology techniques for insulin manufacturing to make diabetes cu
             <img class="mx-auto rounded-circle" src="images\pratik-pradhan-final.png" alt="" />
             <h4>Pratik Pradhan</h4>
             <p class="text-muted">Business Analyst, Deloitte <br>
-              MS, Healthcare Management - Johns Hopkins University <br>
+              MS, Healthcare Management <br> Johns Hopkins University <br>
               B.Tech, Biomedical Engineering - VIT,Vellore</p>
             <br>
             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/pnishat/"><i class="fab fa-linkedin-in"></i></a>
@@ -133,7 +133,7 @@ Synthetic biotechnology techniques for insulin manufacturing to make diabetes cu
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C4D03AQFKTibyIqmXsg/profile-displayphoto-shrink_800_800/0?e=1602115200&v=beta&t=62TuybtKbGX82Ji5CXmbvQ4Ebbch2mWfKvE7vBGTvJM" alt="" />
             <h4>Dr. Debanjan Dhar</h4>
-            <p class="text-muted">Assistant Professor, Department of Medicine,
+            <p class="text-muted">Assistant Professor, <br> Department of Medicine, <br>
               Division of Gastroenterology 
               University of California - San Diego</p>
             <br />
