--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Synthetic biotechnology techniques for insulin manufacturing to make diabetes cu
             <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C4D03AQFKTibyIqmXsg/profile-displayphoto-shrink_800_800/0?e=1602115200&v=beta&t=62TuybtKbGX82Ji5CXmbvQ4Ebbch2mWfKvE7vBGTvJM" alt="" />
             <h4>Dr. Debanjan Dhar</h4>
             <p class="text-muted">Assistant Professor, <br> Department of Medicine, <br>
-              Division of Gastroenterology 
+              Division of Gastroenterology <br>
               University of California - San Diego</p>
             <br />
             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/debanjan-dhar-5b862b17/"><i class="fab fa-linkedin-in"></i></a>
