--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Synthetic biotechnology techniques for insulin manufacturing to make diabetes cu
             <h4>Cameron Owen</h4>
             <p class="text-muted">Founder, ex-CEO Aevus Diagnostics <br>
               MS, Healthcare Management <br> Johns Hopkins University <br>
-              BS, Microbiology - University of Arizona</p>
+              BS, Microbiology - University of Arizona</p> <br>
             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/camerondowen/"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
