add style="margin-top: -6rem;" in index.html file, line number 46 for inline-style element

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Synthetic biotechnology techniques for insulin manufacturing to make diabetes cu
   </nav>
   <!-- Masthead-->
   <header class="masthead">
-    <div class="container front-page">
+    <div class="container front-page" style="margin-top: -6rem;">
       <picture>
         <img class="logo-image" src="images\rbio vector fina.webp" alt="">
       </picture>
